--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@ body {
     width: 70%;
     margin-left: 15%;
     margin-right: 15%;
+
 }
 
 .characters {
     background-color: rgba(255, 192, 203, 0.192);
     padding: 30px;
     margin: 30px;
+    border-radius: 20px;
 }
 
 .characters h1 {
@@ -81,6 +83,7 @@ hr {
     margin-left: 17.2%;
     margin-right: 17.2%;
     padding: 2%;
+    border-radius: 20px;
 }
 
 .all {
